# otterwiki-plugins

./: README.MD
plugin_date/: otterwiki_date.py  pyproject.toml
plugin_imagebox/: otterwiki_imagebox.py  pyproject.toml
plugin_imperial_helper/: otterwiki_imperial_helper.py  pyproject.toml
plugin_infobox/: otterwiki_infobox.py  pyproject.toml
