[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otterwiki_date"
description = "A plugin for handling dates and age using real-world or fantasy date systems."
version = "0.1.1"
authors = [
    { name = "Jakob Harych", email = "jakob@harych.de" }
]

[project.entry-points.otterwiki]
date_timeline = "otterwiki_date"